--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                             <span class="about__info-name">Completed <br> project</span>
                         </div>
                         <div>
-                            <span class="about__info-title">0.3+</span>
+                            <span class="about__info-title">03+</span>
                             <span class="about__info-name">Completed <br> worked</span>
                         </div>
                     </div>
@@ -705,18 +705,18 @@
         <!--==================== TESTIMONIAL ====================-->
         <section class="testimonial section">
             <h2 class="section__title">Testimonial</h2>
-            <span class="section__subtitle">My client saying</span>
+            <span class="section__subtitle">My teachers</span>
             <div class="testimonial__container container swiper-container">
                 <div class="swiper-wrapper">
                     <!--==================== TESTIMONIAL 1 ====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="/assets/img/testimonial1.jpg" alt="" class="testimonial__img">
+                                <img src="/assets/img/umarAka.png" alt="" class="testimonial__img">
 
                                 <div>
-                                    <h3 class="testimonial__name">Sara Smith</h3>
-                                    <span class="testimonial__client">Client</span>
+                                    <h3 class="testimonial__name">Umar Djuraev</h3>
+                                    <span class="testimonial__client">Strong Middle</span>
                                 </div>
                             </div>
                             <div>
@@ -727,18 +727,18 @@
                                 <i class="uil uil-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Fuga praesentium quisquam quibusdam velit recusandae laboriosam?</p>
+                        <p class="testimonial__description">My 1st teacher who taught me programming,
+                            this person introduced me to the world of programming and taught me everything</p>
                     </div>
                     <!--==================== TESTIMONIAL 2 ====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="/assets/img/testimonial2.jpg" alt="" class="testimonial__img">
+                                <img src="/assets/img/baxiyor aka.png" alt="" class="testimonial__img">
 
                                 <div>
-                                    <h3 class="testimonial__name">John Hanson</h3>
-                                    <span class="testimonial__client">Client</span>
+                                    <h3 class="testimonial__name">Baxtiyor Xusanov</h3>
+                                    <span class="testimonial__client">Middle</span>
                                 </div>
                             </div>
                             <div>
@@ -746,21 +746,19 @@
                                 <i class="uil uil-star testimonial__icon-star"></i>
                                 <i class="uil uil-star testimonial__icon-star"></i>
                                 <i class="uil uil-star testimonial__icon-star"></i>
-                                <i class="uil uil-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Fuga praesentium quisquam quibusdam velit recusandae laboriosam?</p>
+                        <p class="testimonial__description">My junior teacher, I learned from him what I didn't know, he helped me a lot.</p>
                     </div>
                     <!--==================== TESTIMONIAL 3 ====================-->
                     <div class="testimonial__content swiper-slide">
                         <div class="testimonial__data">
                             <div class="testimonial__header">
-                                <img src="/assets/img/testimonial3.jpg" alt="" class="testimonial__img">
+                                <img src="/assets/img/zurriyot aka.png" alt="" class="testimonial__img">
 
                                 <div>
-                                    <h3 class="testimonial__name">Daul Jek</h3>
-                                    <span class="testimonial__client">Client</span>
+                                    <h3 class="testimonial__name">Zurriyotbek Nabiyev</h3>
+                                    <span class="testimonial__client">Strong Junior</span>
                                 </div>
                             </div>
                             <div>
@@ -768,11 +766,9 @@
                                 <i class="uil uil-star testimonial__icon-star"></i>
                                 <i class="uil uil-star testimonial__icon-star"></i>
                                 <i class="uil uil-star testimonial__icon-star"></i>
-                                <i class="uil uil-star testimonial__icon-star"></i>
                             </div>
                         </div>
-                        <p class="testimonial__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Fuga praesentium quisquam quibusdam velit recusandae laboriosam?</p>
+                        <p class="testimonial__description">This teacher also helped me a lot in learning programming and taught me things that I struggled with</p>
                     </div>
                 </div>
                 <div class="swiper-pagination swiper-pagination-testimonial"></div>
@@ -807,15 +803,15 @@
                         </div>
                     </div>
                 </div>
-                <form action="" class="contact__form grid">
+                <form class="contact__form grid" action="https://formspree.io/f/meqwpbpv" method="POST"  enctype="multipart/form-data" >
                     <div class="contact__inputs grid">
                         <div class="contact__content">
                             <label for="" class="contact__label">Name</label>
-                            <input type="text" class="contact__input">
+                            <input type="text" name="name" class="contact__input" required>
                         </div>
                         <div class="contact__content">
-                            <label for="" class="contact__label">Email</label>
-                            <input type="email" class="contact__input">
+                            <label for="" class="contact__label" >Email</label>
+                            <input type="email" name="email" class="contact__input" required>
                         </div>
                     </div>
                     <div class="contact__content">
@@ -824,10 +820,10 @@
                     </div>
                     <div class="contact__content">
                         <label for="" class="contact__label">Message</label>
-                        <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                        <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                     </div>
                     <div>
-                        <a href="" class="button button--flex">
+                        <a class="button button--flex" type="submit">
                             Send Message
                             <i class="uil uil-message button__icon"></i>
                         </a>
@@ -878,6 +874,24 @@
     <script src="/assets/js/swiper-bundle.min.js"></script>
     <!--==================== MAIN JS ====================-->
     <script src="/assets/js/main.js"></script>
+    <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
+    <script> document.oncontextmenu = cmenu; function cmenu() { return false; } </script>
+    <script type="text/javascript">
+      document.onkeydown = function(e) {
+      if(event.keyCode == 123) {
+      return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)){
+      return false;
+      }
+      if(e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)){
+      return false;
+      }
+      }
+      </script>
 
 </body>
 
