--- a/index.html
+++ b/index.html
@@ -798,8 +798,7 @@
             <span class="section__subtitle" data-aos="fade-up"
             data-aos-anchor-placement="bottom-bottom">Get in touch</span>
 
-            <div class="contact__container container grid" data-aos="fade-up"
-            data-aos-anchor-placement="bottom-bottom">
+            <div class="contact__container container grid" data-aos="fade-up">
                 <div>
                     <div class="contact__information">
                         <i class="uil uil-phone contact__icon"></i>
